--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="container-fluid">
                 <a class="navbar-brand lead text-dark" href="#"> 
                     <!-- aqui -->
-                    <span class="font-weight-bold">Miguel</span> Castro
+                    <span class="font-weight-bold">Data</span> 1
                 </a>
                 <button class="navbar-toggler btn text-dark" data-toggle="modal" data-target="#exampleModalCenter" >
                     <i class="fas fa-bars lead text-dark"></i>
