--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="container-fluid">
                 <a class="navbar-brand lead text-dark" href="#"> 
                     <!-- aqui -->
-                    <span class="font-weight-bold">Data</span> 1
+                    <!-- <span class="font-weight-bold">Data</span> 1 -->
                 </a>
                 <button class="navbar-toggler btn text-dark" data-toggle="modal" data-target="#exampleModalCenter" >
                     <i class="fas fa-bars lead text-dark"></i>
@@ -33,9 +33,9 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto">
                         <!-- aqui -->
-                        <li class="nav-item ">
+                        <!-- <li class="nav-item ">
                             <a class="nav-link text-light" href="#">Menu 1</a>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </div>
@@ -101,18 +101,16 @@
                 <div class="modal-header mx-auto border-bottom-0">
                     <h1 class="modal-title text-light" id="exampleModalLongTitle">
                         <!-- Menú -->
-                        Hola
+                        <!-- Hola -->
                     </h1>
                 </div>
                 <div class="modal-body">
                     <ul class="list-unstyled text-center ">
                         <!-- aqui -->
-                        <li class="mb-5">
-                            <a href="#" class="text-decoration-none display-4 text-light">Data 1</a>
-                        </li>
+<!--                         
                         <li class="mb-5">
                             <a href="#" class="text-decoration-none display-4 text-light">Data 2</a>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
                 <div class="modal-footer mx-auto border-top-0">
